# rmd

./: Cargo.toml  README.md  install_on_local.sh
src/: main.rs  metadata.rs
src/ui/: app.rs  body.rs  dialog.rs  header.rs  mod.rs  utils.rs
